2008-06-15  Thomas Wood  <thos@gnome.org>

	* Makefile.am:
	* icons/*:

	Provide a Tango style application icon for Preferred Applications
	capplet (bug 397312). Artwork by Jakub Steiner <jimmac@ximian.com>.

2008-05-18  Thomas Wood  <thos@gnome.org>

	* gnome-da-capplet.c: Convert to use GConfPropertyEditor and remove
	a lot of duplicated code in the process.

==================== 2.23.2 ====================

2008-04-16  Jens Granseuer  <jensgr@gmx.net>

	* gnome-da-capplet.c: (show_dialog), (main):
	* gnome-default-applications-properties.glade: add -p/--show-page to
	open the dialog on a specific page (see bug #528196)

2008-02-21  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Willie Walker <william.walker@sun.com>

	* gnome-at-commandline.in.in: use `...` syntax instead of $(...) for
	better portability (bug #517938)

2008-02-09  Jens Granseuer  <jensgr@gmx.net>

	* gnome-default-applications.xml.in: add support for Konsole, too
	(bug #515386)

2008-02-09  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Nicolas Valcárcel

	* gnome-default-applications.xml.in: add support for Terminator
	console (bug #515366)

2008-02-08  Jens Granseuer  <jensgr@gmx.net>

	* gnome-at-session.desktop.in.in: improve name and description for the
	visual AT autostarter (bug #515197)

2008-02-01  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Sven Arvidsson <sa@whiz.se>

	* gnome-default-applications.xml.in: support --new-tab/--new-window
	for Iceweasel (bug #322795)

2007-12-06  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Chris Jones

	* gnome-default-applications.xml.in: sok is now called onBoard (bug
	#499328)

2007-11-28  Jens Granseuer  <jensgr@gmx.net>

	Based on patch by: Jakub Rusinek <liviopl.pl@gmail.com>

	* gnome-default-applications.xml.in: add support for Midori web browser
	(bug #500274)

2007-11-26  Sebastien Bacher  <seb128@ubuntu.com>

	* gnome-default-applications.xml.in: don't list the oudated evolution
	  versions nor the text web browsers (Closes: #499327)
