@@ -1,3 +1,11 @@
+2008-07-15  Jens Granseuer  <jensgr@gmx.net>
+
+	Patch by: Aprotim Sanyal <aprotim@google.com>
+
+	* gnome-da-xml.c: (gnome_da_xml_load_list): make it possible for apps
+	to install additional XML files to extend the list of available
+	applications (bug #527304)
+
 2008-06-15  Thomas Wood  <thos@gnome.org>
 
 	* Makefile.am:
